--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@19.0.0/",
     "react": "https://esm.sh/react@19.0.0",
-    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0"
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -64,14 +66,14 @@
     </div>
     <div id="root"></div>
     <script>
-      // Hide loader once scripts are ready
-      window.addEventListener('load', () => {
+      // Force hide loader if React takes too long or fails silently
+      setTimeout(() => {
         const loader = document.getElementById('app-loader');
-        if (loader) {
-          loader.style.opacity = '0';
-          setTimeout(() => loader.remove(), 500);
+        if (loader && loader.style.opacity !== '0') {
+            loader.style.opacity = '0';
+            setTimeout(() => loader.remove(), 500);
         }
-      });
+      }, 5000);
     </script>
 </body>
 </html>
