--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             color: #e5e5e5;
             margin: 0;
             overflow: hidden;
+            -webkit-font-smoothing: antialiased;
         }
         #app-loader {
             position: fixed;
@@ -62,18 +63,23 @@
 <body>
     <div id="app-loader">
         <div class="spinner"></div>
-        <p style="margin-top: 1rem; font-size: 12px; font-weight: 700; letter-spacing: 0.1em; color: #444;">INITIALIZING OMNIPLAYER</p>
+        <p style="margin-top: 1rem; font-size: 11px; font-weight: 800; letter-spacing: 0.2em; color: #555; text-transform: uppercase;">Initializing OmniPlayer</p>
     </div>
     <div id="root"></div>
     <script>
-      // Force hide loader if React takes too long or fails silently
-      setTimeout(() => {
+      // Global function to be called when the app is mounted
+      window.hideOmniLoader = function() {
         const loader = document.getElementById('app-loader');
-        if (loader && loader.style.opacity !== '0') {
-            loader.style.opacity = '0';
-            setTimeout(() => loader.remove(), 500);
+        if (loader) {
+          loader.style.opacity = '0';
+          setTimeout(() => {
+            if (loader.parentNode) loader.parentNode.removeChild(loader);
+          }, 500);
         }
-      }, 5000);
+      };
+
+      // Safety timeout: hide after 8 seconds no matter what
+      setTimeout(window.hideOmniLoader, 8000);
     </script>
 </body>
 </html>
